# python-advanced

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
initial/homework/: binary_search.py  call_counter_decorator.py  even_squares.py  generators.py  heads_and_legs_puzzle.py  resource_quota_context_manager.py
initial/homework_answers/: binary_search.py  call_counter_decorator.py  even_squares.py  generators.py  heads_and_legs_puzzle.py  resource_quota_context_manager.py
memory/c_based_concepts/: lectures_examples.ipynb
memory/c_based_concepts/homework/: byte_slice.py  choice_of_concepts.py  top_users.py
memory/c_based_concepts/homework_answers/: byte_slice.py  choice_of_concepts.py  top_users.py
memory/caching/: lectures_examples.ipynb
memory/caching/homework/: choice_of_strategy.py  house_robber.py  lru_cache.py
memory/fragments_and_copies/: lectures_examples.ipynb
memory/fragments_and_copies/homework/: __init__.py  copy_on_write_array.py  event_aggregator.py  memory_profiler.py
memory/fragments_and_copies/homework_answers/: copy_on_write_array.py  (+2 more)
memory/memory_anatomy/: lectures_examples.ipynb
tests/c_based_concepts/: conftest.py  test_byte_slice.py  test_dask_aggregator.py  test_pandas_aggregator.py  test_top_users.py
tests/caching/: test_house_robber.py  test_lru_cache.py  test_parse_cache.py
tests/initial/: test_binary_search.py  test_call_counter_decorator.py  test_even_squares.py  test_generators.py  test_heads_and_legs_puzzle.py  test_resource_quota_context_manager.py
(+28 files in other folders)
